# Ideno

./: .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  docker-compose.yml  package.json  panda.config.ts  pnpm-lock.yaml  tsconfig.json
server/: .dockerignore  .env.building  .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile
server/migrations/: 20240111132548_user_table.sql  20240112165140_create_profile_table.sql  20240112170114_create_experience_table.sql  20240112170244_create_education_table.sql  20240112170536_create_certification_table.sql  20240112171013_create_contact_information_table.sql
server/src/: main.rs  router.rs
server/src/auth/: check_admin.rs  check_user.rs  mod.rs
server/src/models/: certification.rs  contact_information.rs  education.rs  experience.rs  mod.rs  profile.rs  user.rs
server/src/response/: error_handling.rs  success_handling.rs
server/src/routes/api/: user.rs
server/src/routes/api/auth/: account.rs  auth.rs  login.rs  logout.rs  mod.rs  profile.rs  register.rs
server/src/routes/api/auth/admin/: certification.rs  contact_information.rs  education.rs  experience.rs  mod.rs  user.rs
server/src/routes/api/auth/profile/: index.rs  (+5 more)
server/src/routes/api/profile/: certification.rs  contact_information.rs  educations.rs  experience.rs  index.rs  mod.rs
server/src/services/: account_service.rs  certification_service.rs  contact_information_service.rs  education_service.rs  experience_service.rs  mod.rs  profile_service.rs  session_service.rs  user_service.rs
server/src/utils/: get_user.rs  mod.rs
(+122 files in other folders)
